# acdh-histogis

./: .flake8  .gitignore  HISTORY.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  build_docs.sh  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: docs.yml
docs/: reference.md
histogis/: __init__.py  histogis.py
tests/: test_histogis.py
